--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "imagemin-pngquant": "^4.1.0",
     "jshint": "^2.9.5"
   }
